Fix for bug 419763 . Logger thread should be joined on exit . r=nelson